--- a/account/templates/user-profile.html
+++ b/account/templates/user-profile.html
@@ -151,7 +151,13 @@ Header START -->
             <!-- Profile info -->
             <!-- Links -->
             <li> 
-              <a class="dropdown-item" href="error" target="_blank">
+              <a class="dropdown-item" href="/home" target="_blank">
+                <i class="fa-fw bi bi-life-preserver me-2"></i>Anasayfa
+              </a> 
+            </li>
+            <li class="dropdown-divider"></li>
+            <li> 
+              <a class="dropdown-item" href="/error" target="_blank">
                 <i class="fa-fw bi bi-life-preserver me-2"></i>Destek iletişim
               </a> 
             </li>
