--- a/account/templates/index.html
+++ b/account/templates/index.html
@@ -147,6 +147,7 @@ Header START -->
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="postMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Hesap </a>
 						<ul class="dropdown-menu" aria-labelledby="postMenu">
+							<li> <a class="dropdown-item" href="profil">Profil</a> </li>
 							<li> <a class="dropdown-item" href="settings">Ayarlar</a> </li>
 							<li> <a class="dropdown-item" href="privacy-and-terms.html">İletişim ve destek</a> </li>
 						</ul>
@@ -313,66 +314,77 @@ Header END -->
             <!-- Main content START -->
             <div class="col-md-8 col-lg-6 vstack gap-4">
                 <!-- Share feed START -->
-                <div class="card card-body">
-                    <div class="d-flex mb-3">
-                        <!-- Avatar -->
-                        <div class="avatar avatar-xs me-2">
-                            <a href="#"> <img class="avatar-img rounded-circle"
-                                    src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
-                        </div>
-                        <!-- Post input -->
-                        <form class="w-100" method="post">
-                            {% csrf_token %}
-                            <div class="mb-3">
-                                <input type="text" class="form-control pe-4 border-0" name="post_title"
-                                    placeholder="Başlık">
-                            </div>
-                            <textarea class="form-control pe-4 border-0" rows="2" data-autoresize
-                                name="post_content" placeholder="Bağış postu alanı..."></textarea>
-								<br></br>
-                            <button type="submit" class="btn btn-primary-soft">Gönder</button>
-                        </form>
-                    </div>
-                    {% if error_message %}
-                    <div class="alert alert-danger" role="alert">
-                        {{ error_message }}
-                    </div>
-                    {% endif %}
-                </div>
-                <div class="post-list">
-                    {% for post in posts %}
-                    <div class="card mb-3">
+				<div class="card card-body">
+					<div class="d-flex mb-3">
+						<!-- Avatar -->
+						<div class="avatar avatar-xs me-2">
+							<a href="#"> <img class="avatar-img rounded-circle"
+									src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
+						</div>
+						<!-- Post input -->
+						<form class="w-100" method="post" enctype="multipart/form-data">
+							{% csrf_token %}
+							<div class="mb-3">
+								<input type="text" class="form-control pe-4 border-0" name="post_title" placeholder="Başlık">
+							</div>
+							<div class="mb-3">
+								<textarea class="form-control pe-4 border-0" rows="2" data-autoresize name="post_content"
+									placeholder="Bağış postu alanı..."></textarea>
+							</div>
+							<!-- Resim yükleme alanı -->
+							<div class="mb-3">
+								<input type="file" class="form-control" name="post_image" accept="image/*">
+							</div>
+							<button type="submit" class="btn btn-primary-soft">Gönder</button>
+						</form>
+					</div>
+					{% if error_message %}
+					<div class="alert alert-danger" role="alert">
+						{{ error_message }}
+					</div>
+					{% endif %}
+				</div>
+				
+				<div class="post-list">
+					{% for post in posts %}
+					<div class="card mb-3">
 						<div class="card-body">
-							<div>
-								{% if post.user.is_superuser %}
-								<div class="avatar">
+							<div class="d-flex align-items-center">
+								<!-- Avatar -->
+								<div class="avatar me-1">
 									<a href="/profile/{{ post.user.username }}">
-										<img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">								
+										<img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
 									</a>
 								</div>
+								<!-- Kullanıcı adı -->
+								<div>
+									{% if post.user.is_superuser %}
 									<span class="h6 stretched-link">
 										<a href="/profile/{{post.user.username}}">{{ post.user.username }} &#x2714;</a>
 									</span>
-								{% else %}
-								<div class="avatar">
-									<a href="/profile/{{ post.user.username }}">
-										<img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
-										
-									</a>
-								</div>
+									{% else %}
 									<span class="h6 stretched">
 										<a href="/profile/{{post.user.username}}">{{ post.user.username }} </a>
 									</span>
-								{% endif %}
-							</div>   
+									{% endif %}
+								</div>
+							</div>
+							<div style="margin-bottom: 20px;"></div>
+							<!-- Başlık -->
 							<h6 class="card-title">{{ post.title }}</h6>
+							<!-- İçerik -->
 							<p class="small mb-0">{{ post.content }}</p>
+							<!-- Tarih -->
 							<p class="small mb-0">Tarih: {{ post.created_at }}</p>
+							<!-- Resim -->
+							{% if post.image %}
+							<img src="{{ post.image.url }}" alt="Post Image" class="img-fluid mt-3">
+							{% endif %}
 						</div>
 					</div>
-					
-                    {% endfor %}
-                </div>
+					{% endfor %}
+				</div>
+				
 
             </div>
             <!-- Main content END -->
@@ -395,7 +407,7 @@ Header END -->
 									  <form class="rounded position-relative">
 										<input class="form-control ps-5	 bg-light" type="search" placeholder="Kullanıcı Arama..." aria-label="Search">
 										<button class="btn bg-transparent px-2 py-0 position-absolute top-50 start-0 translate-middle-y" type="submit"><i class="bi bi-search fs-5"> </i></button>
-									  </form>
+									  </form>	
 									</div>
 								  </div>
 								  <br></br>
@@ -420,11 +432,13 @@ Header END -->
                                     <!-- Title -->
                                     <div class="h6 stretched">
                                         <a class="h6 mb-0" href="/profile/{{user.username}}">{{user.username}}	</a>
+									
+                                	</div>
 									{% endif %}
-                                </div>
-                                {% endfor %}
+                               
                                 <!-- Card body END -->
                             </div>
+							 {% endfor %}
                         </div>
                     </div>
                 </div>
@@ -492,7 +506,7 @@ Header END -->
 				</li>
 				<!-- Button -->
 				<li class="mt-3 d-grid">
-					<a class="btn btn-primary-soft" href="messaging.html"> Bütün istekleri Gör</a>
+					<a class="btn btn-primary-soft" href="message"> Bütün istekleri Gör</a>
 				</li>
 
 			</ul>
