--- a/account/templates/my-profile.html
+++ b/account/templates/my-profile.html
@@ -164,6 +164,12 @@ Header START -->
                 </div>
               </div>
             </li>
+            <li> 
+              <a class="dropdown-item" href="/home" target="_blank">
+                <i class="fa-fw bi bi-life-preserver me-2"></i>Anasayfa
+              </a> 
+            </li>
+            <li class="dropdown-divider"></li>
             <!-- Links -->
             <li> 
               <a class="dropdown-item" href="error" target="_blank">
@@ -246,8 +252,11 @@ Header END -->
                           </div>
                           <!-- Button -->
                           <div class="d-flex mt-3 justify-content-center ms-sm-auto">
-                              <button class="btn btn-danger-soft me-2" type="button"> <i class="bi bi-pencil-fill pe-1"></i>Profilini Düzenle </button>
-                          </div>
+                            <a href='settings' class="btn btn-danger-soft me-2"> 
+                                <i class="bi bi-pencil-fill pe-1"></i> Profilini Düzenle 
+                            </a>
+                        </div>
+                        
                       </div>
                       <!-- List profile -->
                       <ul class="list-unstyled mb-0 mt-3 mt-sm-0">
@@ -266,7 +275,7 @@ Header END -->
                   </ul>
               </div>
           </div>
-        {% if user_posts %}
+        
           <!-- My profile END -->
 
           <!-- Share feed START -->
@@ -278,13 +287,14 @@ Header END -->
                   </div>
                   <!-- Post input -->
                   <form class="w-100" action="submit_post" method="post">
-                      {% csrf_token %}
+                      
                       <input class="form-control pe-4 border-0" placeholder="Gönderi girelecek alan" name="post_content" data-bs-toggle="modal" data-bs-target="#modalCreateFeed">
                   </form>
               </div>
           </div>
           <!-- Share feed END -->
-
+        {% if user_posts %}
+          {% csrf_token %}
           {% for post in user_posts %}
           <div class="card">
               <!-- Card header START -->
@@ -309,6 +319,9 @@ Header END -->
               <div class="card-body">
                   <h1 class="mb-0 h5">{{post.title }}<i class="bi bi-patch-check-fill text-success small"></i></h1>
                   <p>{{ post.content }}</p>
+                  {% if post.image %}
+							<img src="{{ post.image.url }}" alt="Post Image" class="img-fluid mt-3">
+							{% endif %}
               </div>
               <!-- Card body END -->
               <!-- Card footer START -->
@@ -348,7 +361,7 @@ Header END -->
                 <p>Merhabalar ben serdar Bilgisayar mühendiliği 3 sınıfım</p>
                 <!-- Date time -->
                 <ul class="list-unstyled mt-3 mb-0">
-                  <li class="mb-2"> <i class="bi bi-calendar-date fa-fw pe-1"></i> Doğum Tarihi: <strong> October 20, 1990 </strong> </li>
+                  <li class="mb-2"> <i class="bi bi-calendar-date fa-fw pe-1"></i>  </li>
                 </ul>
               </div>
               <!-- Card body END -->
@@ -361,11 +374,10 @@ Header END -->
             <div class="card">
               <!-- Card header START -->
               <div class="card-header d-flex justify-content-between border-0">
-                <h5 class="card-title">Önerilen onaylı kuruluşlar</h5>
+                <h5 class="card-title">Önerilen onaylı kullanıcılar</h5>
                 <a class="btn btn-primary-soft btn-sm" href="#!"> <i class="fa-solid fa-plus"></i> </a>
               </div>
               <!-- Card header END -->
-              <!-- Card body START -->
               <div class="card-body position-relative pt-0">
                 <!-- Experience item START -->
                 <div class="d-flex">
@@ -409,74 +421,39 @@ Header END -->
       <!-- Modal feed header END -->
 
       <!-- Modal feed body START -->
-      <div class="modal-body">
-         <!-- Add Feed -->
-         <div class="d-flex mb-3">
-          <!-- Feed box  -->
-          <form class="w-100">
-            <textarea class="form-control pe-4 fs-3 lh-1 border-0" rows="4" placeholder="Gönderi girelecek alan..." autofocus></textarea>
-          </form>
-        </div>
-      </div>
-      <!-- Modal feed body END -->
+      <form class="w-100" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
       
-      <!-- Modal feed footer -->
-      <div class="modal-footer row justify-content-between">
-        <!-- Select -->
-        <div class="col-lg-3">
-          <select class="form-select js-choice" data-position="top" data-search-enabled="false">
-            <option value="PB">Emekli</option>
-            <option value="PV">Engelli</option>
-            <option value="PV">Öğrenci</option>
-            <option value="PV">Memur</option>
-          </select>
+        <div class="mb-3">
+            <input type="text" class="form-control pe-4 border-0" name="post_title" placeholder="Başlık">
         </div>
-        <!-- Button -->
-        <div class="col-lg-8 text-sm-end">
-          <button type="button" class="btn btn-success-soft">Gönder</button>
+        <textarea class="form-control pe-4 border-0" rows="2" data-autoresize name="post_content" placeholder="Bağış postu alanı..."></textarea>
+        <br><br>
+        <!-- Resim yükleme alanı -->
+        <div class="mb-3">
+            <input type="file" class="form-control" name="post_image" accept="image/*">
         </div>
-      </div>
-      <!-- Modal feed footer -->
-
+        <div class="modal-footer row justify-content-between">
+            <!-- Select -->
+            <div class="col-lg-3">
+                <select class="form-select js-choice" data-position="top" data-search-enabled="false">
+                    <option value="PB">Emekli</option>
+                    <option value="PV">Engelli</option>
+                    <option value="PV">Öğrenci</option>
+                    <option value="PV">Memur</option>
+                </select>
+            </div>
+            <!-- Button -->
+            <div class="col-lg-8 text-sm-end">
+                <button type="submit" class="btn btn-primary-soft">Gönder</button>
+            </div>
+        </div>
+    </form>
     </div>
   </div>
 </div>
 <!-- Modal create feed END -->
 
-<!-- Modal create Feed photo START -->
-<div class="modal fade" id="feedActionPhoto" tabindex="-1" aria-labelledby="feedActionPhotoLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <!-- Modal feed header START -->
-      <div class="modal-header">
-        <h5 class="modal-title" id="feedActionPhotoLabel">Add post photo</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <!-- Modal feed header END -->
-
-        <!-- Modal feed body START -->
-        <div class="modal-body">
-        <!-- Add Feed -->
-        <div class="d-flex mb-3">
-          <!-- Avatar -->
-          <div class="avatar avatar-xs me-2">
-            <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg'  %}" alt="">
-          </div>
-          <!-- Feed box  -->
-          <form class="w-100">
-            <textarea class="form-control pe-4 fs-3 lh-1 border-0" rows="2" placeholder="Share your thoughts..."></textarea>
-          </form>
-        </div>
-
-        <div class="modal-footer ">
-          <!-- Button -->
-            <button type="button" class="btn btn-danger-soft me-2" data-bs-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-success-soft">Post</button>
-        </div>
-        <!-- Modal feed footer -->
-    </div>
-  </div>
-</div>
 <!-- Modal create Feed photo END -->
 
 <!-- Modal create Feed video END -->
