--- a/account/templates/messaging.html
+++ b/account/templates/messaging.html
@@ -97,22 +97,13 @@ Header START -->
 	<nav class="navbar navbar-expand-lg">
 		<div class="container">
 
-
 			<!-- Responsive navbar toggler -->
-			<button class="navbar-toggler ms-auto icon-md btn btn-light p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-animation">
-          <span></span>
-          <span></span>
-          <span></span>
-        </span>
-      </button>
+		
 
 			<!-- Main navbar START -->
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 
-        <!-- Nav Search START -->
-       
-        <!-- Nav Search END -->
+
 
 				<ul class="navbar-nav navbar-nav-scroll ms-auto">
 					<!-- Nav item 1 Demos -->
@@ -121,16 +112,11 @@ Header START -->
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sayfalar</a>
 						<ul class="dropdown-menu" aria-labelledby="pagesMenu">
-							<li> <a class="dropdown-item" href="albums.html">Albums</a></li>
-							<li> <a class="dropdown-item" href="celebration.html">Celebration</a></li>
-
-							<li> <a class="dropdown-item" href="post-details.html">Post details</a></li>
-							<li> <a class="dropdown-item" href="video-details.html">Video details</a></li>
-              <li> <a class="dropdown-item" href="blog.html">Blog</a></li>
-							<li> <a class="dropdown-item" href="blog-details.html">Blog details</a></li>
+							<li> <a class="dropdown-item" href="profil">Profil</a></li>
+							<li> <a class="dropdown-item" href="#">Destek ve iletişim</a></li>
               
 							<!-- Dropdown submenu levels -->
-							<li class="dropdown-divider"></li>
+
 							
 						</ul>
 					</li>
@@ -178,10 +164,10 @@ Header START -->
                   <p class="small m-0">Web Developer</p>
                 </div>
               </div>
-              <a class="dropdown-item btn btn-primary-soft btn-sm my-2 text-center" href="/profil">View profile</a>
+              <a class="dropdown-item btn btn-primary-soft btn-sm my-2 text-center" href="/profil">Profilini görüntüle </a>
             </li>
             <!-- Links -->
-            <li><a class="dropdown-item" href="settings.html"><i class="bi bi-gear fa-fw me-2"></i>Settings & Privacy</a></li>
+            <li><a class="dropdown-item" href="settings.html"><i class="bi bi-gear fa-fw me-2"></i>Ayarlar</a></li>
             <li> 
               <a class="dropdown-item" href="https://support.webestica.com/" target="_blank">
                 <i class="fa-fw bi bi-life-preserver me-2"></i>Support
