--- a/account/templates/user-profile.html
+++ b/account/templates/user-profile.html
@@ -145,7 +145,11 @@ Header START -->
 			<ul class="nav flex-nowrap align-items-center ms-sm-3 list-unstyled">
         <li class="nav-item ms-2 dropdown">
 					<a class="nav-link btn icon-md p-0" href="#" id="profileDropdown" role="button" data-bs-auto-close="outside" data-bs-display="static" data-bs-toggle="dropdown" aria-expanded="false">
-						<img class="avatar-img rounded-2"  src="{% static 'assets/images/avatar/0.jpg' %}" alt="">
+						{% if user.userprofile.profile_picture%}
+                            <img class="avatar-img rounded-circle" src="{{ user_profile.profile_picture.url  }}" alt="">
+                        {% else %}
+                            <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
+                        {% endif %}
 					</a>
           <ul class="dropdown-menu dropdown-animation dropdown-menu-end pt-3 small me-md-n3" aria-labelledby="profileDropdown">
             <!-- Profile info -->
@@ -227,7 +231,11 @@ Header END -->
                       <div>
                           <!-- Avatar -->
                           <div class="avatar avatar-xxl mt-n5 mb-3">
-                              <img class="avatar-img rounded-circle border border-white border-3" src="{% static 'assets/images/avatar/0.jpg'  %}" alt="">
+                            {% if user.userprofile.profile_picture%}
+                            <img class="avatar-img rounded-circle" src="{{ user_profile.profile_picture.url  }}" alt="">
+                        {% else %}
+                            <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
+                        {% endif %}
                           </div>
                       </div>
                       <div class="ms-sm-4 mt-sm-3">
@@ -269,7 +277,11 @@ Header END -->
                       <div class="d-flex align-items-center">
                           <!-- Avatar -->
                           <div class="avatar avatar-story me-2">
-                              <a href="#!"> <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg'  %}" alt=""> </a>
+                            {% if user.userprofile.profile_picture %}
+                            <img class="avatar-img rounded-circle" src="{{ user_profile.profile_picture.url  }}" alt="">
+                            {% else %}
+                            <img class="avatar-img rounded-circle" src="{% static 'assets/images/avatar/0.jpg' %}" alt=""> </a>
+                          {% endif %}
                           </div>
                           <!-- Info -->
                           <div>
